# expense-categorisation-and-analysis

./: .gitignore  2024-10-27_finance.csv  2024-10-27_removed_items.csv  2024-10-27_summary.csv  2024-10-28_finance.csv  2024-10-28_summary.csv  2024-10-29_finance.csv  2024-10-29_summary.csv  README.md  categorisation_keywords.csv  finance.py  finance_2024-10-27.csv  finance_categorization.py  finance_log.txt  finance_visualize.py  keyword_loader.py  keyword_mapping.csv  readme.md  removed_items_2024-10-27.csv  report_preparer.py
archive/: finance_categorization.py  finance_visualize.py  readme.md
code/: CMakeLists.txt  categorizer.py  finance_categorization.py  finance_visualize.py  report_generator.py
code/app/: main.cpp
code/app/inc/: app_config.hpp  chart_manager.hpp  file_dialog_manager.hpp  finance_categorisation_window.hpp  main_window.hpp  plot_manager.hpp  plot_window.hpp  table_manager.hpp  table_window.hpp  ui_manager.hpp  visualization_manager.hpp  window_manager.hpp
code/app/include/: finance_categorisation_window.hpp
code/app/src/: app_config.cpp  chart_manager.cpp  file_dialog_manager.cpp  finance_categorisation_window.cpp  main.cpp  main_window.cpp  plot_manager.cpp  plot_window.cpp  table_manager.cpp  table_window.cpp  ui_manager.cpp  visualization_manager.cpp  window_manager.cpp
code/lib/: data_loader.py  result_saver.py
code/lib/finance/: finance_categorisation.cpp
code/lib/finance/inc/: csv_parser.hpp  data_loader.hpp  finance_processor.hpp  keyword_loader.hpp  transaction_categorisation.hpp
code/lib/finance/src/: csv_parser.cpp  data_exporter.cpp  data_loader.cpp  report_generator.cpp  transaction_categorisation.cpp
code/lib/gui/inc/: main_window.hpp
code/lib/gui/src/: finance_categorisation_window.cpp  main_window.cpp
code/lib/inc/: data_exporter.hpp  finance_types.hpp  report_generator.hpp  transaction_parser.hpp
code/lib/src/: data_exporter.cpp  data_loader.cpp  finance_processor.cpp  keyword_loader.cpp  report_generator.cpp  transaction_parser.cpp
code/resources/: Info.plist  resources.qrc
code/resources/icons/: resources.qrc
config/: categorisation_keywords.csv
files_categorized/: 2024-07-01_weekly_summary.csv  2024-07-08_weekly_summary.csv  2024-07-15_weekly_summary.csv  2024-07-22_weekly_summary.csv  2024-07-29_weekly_summary.csv  2024-07_monthly_summary.csv  2024-08-05_weekly_summary.csv  2024-08-12_weekly_summary.csv  2024-08-19_weekly_summary.csv  2024-08-26_weekly_summary.csv  2024-08_monthly_summary.csv  2024-09-02_weekly_summary.csv  2024-09-09_weekly_summary.csv  2024-09-16_weekly_summary.csv  2024-09-23_weekly_summary.csv  2024-09-30_weekly_summary.csv  2024-09_monthly_summary.csv  2024-10-07_weekly_summary.csv  2024-10-14_weekly_summary.csv  2024-10-21_weekly_summary.csv  2024-10_monthly_summary.csv  2024-11-01_finance.csv
files_to_categorise/: Amex Data Export - Joint - JulyOctober.csv  Monzo Data Export - Joint - July.csv  Monzo Data Export - Joint - October.csv  Monzo Data Export - Lara Flex - September.csv
finance_files/: Amex Data Export - Joint - JulyOctober.csv  Monzo Data Export - CSV.csv  Monzo Data Export - Joint - August.csv  Monzo Data Export - Lara Flex - August.csv  Monzo Data Export - Lara Flex - October.csv
input_files/: Monzo Data Export - Joint - September.csv  Monzo Data Export - Lara Flex - July.csv
not included/: Monzo Data Export - Joint - October.csv
output_files/: categorised_transactions.csv  monthly_summary.csv  weekly_summary.csv
scripts/: build.sh  clean.sh  run.sh
